--- a/petalinux_proj/subsystems/linux/configs/device-tree/zynq-7000.dtsi
+++ b/petalinux_proj/subsystems/linux/configs/device-tree/zynq-7000.dtsi
@@ -381,7 +381,7 @@
 			clocks = <&clkc 4>;
 		};
 
-		usb0: usb@e0002000 {
+		/*usb0: usb@e0002000 {
 			compatible = "xlnx,zynq-usb-2.20a", "chipidea,usb2";
 			status = "disabled";
 			clocks = <&clkc 28>;
@@ -389,7 +389,24 @@
 			interrupts = <0 21 4>;
 			reg = <0xe0002000 0x1000>;
 			phy_type = "ulpi";
-		};
+		};*/
+		
+		usb_0: usb@e0002000 {
+            		compatible = "xlnx,zynq-usb-2.20.a", "chipidea,usb2";
+            		clocks = <&clkc 28>
+            		dr_mode = "host";
+            		interrupt-parent = <&intc>;
+            		interrupts = <0 21 4>;
+            		reg = <0xe0002000 0x1000>;
+            		usb-phy = <&usb_phy0>;
+        	};
+		usb_phy0: phy0 {
+       			compatible = "ulpi-phy";
+       			#phy-cells = <0>;
+       			reg = <0xe0002000 0x1000>;
+       			view-port = <0x170>;
+       			drv-vbus;
+   		};
 
 		usb1: usb@e0003000 {
 			compatible = "xlnx,zynq-usb-2.20a", "chipidea,usb2";
